[project]
name = "box-pricer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.15"
dependencies = [
    "pandas>=2.3.3",
    "torch>=2.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/box_pricer"]
